...
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    tools:layout_editor_absoluteX="-2dp"
    tools:layout_editor_absoluteY="11dp">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="356dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:inputType="text|textNoSuggestions"
...
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="514dp"
        android:labelFor="@id/editTextPassword"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="590dp"
        android:text="@string/login"
...
